src/objects/LeanData__L2a_Router_Node__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Node_Name__c</fullName>
        <externalId>true</externalId>
        <label>Node Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Node_Routing_Info__c</fullName>
        <label>Node Routing Info</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Node_Type__c</fullName>
        <label>Node Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__SObject_Type__c</fullName>
        <label>SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Unique_Node_Name__c</fullName>
        <externalId>true</externalId>
        <label>Unique Node Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>L2a Router Node</label>
    <nameField>
        <label>L2a Router Node Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>L2a Router Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>